# vidrank

./: README.md  package.json  pnpm-lock.yaml
.github/: cd.yaml
.github/workflows/: cd.yaml  ci.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
backend/tests/: test_version.py
backend/vidrank/: __init__.py  app.py  cli.py
backend/vidrank/app/: app.py  app_state.py  log_config.py  routes.py
backend/vidrank/app/logging/: logging_config.py  logging_settings.py  logging_utilities.py
backend/vidrank/cli/: cli.py
backend/vidrank/lib/: channel_cache.py  choice.py  choice_set.py  matcher.py  matching_settings.py  playlist_cache.py  record.py  record_tracker.py  sample_utilities.py  selection.py  selection_video.py  settings.py  transaction.py  transaction_tracker.py  transaction_type.py  video_cache.py  video_facade.py  video_utilities.py  youtube_facade.py
backend/vidrank/lib/analytics/: analytics.py
backend/vidrank/lib/caching/: pickle_cache.py  record_tracker.py
backend/vidrank/lib/matching/: matcher.py
backend/vidrank/lib/models/: action.py  choice.py  choice_set.py  matching_settings.py  matching_strategy.py  record.py  settings.py
backend/vidrank/lib/rank/: ranker.py
backend/vidrank/lib/ranking/: ranker.py  ranking.py
backend/vidrank/lib/utilities/: datetime_utilities.py  identifier_utilities.py  io_utilities.py  search_utilities.py  typing_utilities.py  url_utilities.py
backend/vidrank/lib/youtube/: channel.py  channel_stats.py  playlist.py  playlist_item.py  thumbnail.py  thumbnail_set.py  video.py  video_stats.py  youtube_client.py  youtube_facade.py  youtube_marshaller.py
docker/: .env.example  compose.yaml
frontend/: .dockerignore  .env.production  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/new/: layout.tsx  nav.tsx  page.tsx
frontend/app/new/rankings/: page.tsx
frontend/app/new/selection/: page.tsx
frontend/app/new/settings/: page.tsx
frontend/app/rank/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: Rankings.tsx  Selector.tsx  Video.tsx  rankings.tsx  selector.tsx  video.tsx
frontend/lib/: action.ts  choiceSet.ts  client.ts  formatUtilities.ts  keys.ts  ranking.ts  selection.ts  selectionVideo.ts  thumbnail.ts  thumbnailSet.ts  video.ts
frontend/lib/hooks/: settings.ts
frontend/lib/models/: choice-set.ts  choice.ts  matching-settings.ts  matchingSettings.ts  matchingStrategy.ts  ranking.ts  settings.ts  thumbnail-set.ts  thumbnailSet.ts  video.ts  videoStats.ts
frontend/lib/utilities/: format-utilities.ts  formatUtilities.ts  objectUtilities.ts  url-utilities.ts  urlUtilities.ts
frontend/styles/: dogear.module.css  globals.css  video.module.css
frontend/widgets/: Button.tsx  Dogear.tsx  SettingsButton.tsx  Toast.tsx  button.tsx  dogear.tsx  settings-button.tsx
