[tool.poetry]
authors = ["Chris Gregory <christopher.b.gregory@gmail.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
description = "Video ranking."
keywords = ["video", "ranking"]
license = "Apache Software License"
name = "vidrank"
readme = "README.md"
repository = "https://github.com/gregorybchris/vidrank"
version = "0.1.0"

[[tool.poetry.packages]]
include = "vidrank"

[tool.poetry.dependencies]
click = "^8.1.7"
python = ">=3.12"
numpy = "^1.26.4"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pendulum = "^3.0.0"
httpx = "^0.27.0"
trueskill = "^0.4.5"
pydantic-extra-types = "^2.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pylint = "^3.1.0"
pytest = "^8.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
vidrank = "vidrank.cli.cli:main"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
src_paths = "*"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pylint.basic]
good-names = ["f", "i"]
notes = ["FIXME"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "logging-fstring-interpolation",
]

[tool.pylint.reports]
output-format = "colorized"
