[tool.poetry]
authors = ["Chris Gregory <christopher.b.gregory@gmail.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
description = "Video ranking."
keywords = ["video", "ranking"]
license = "Apache Software License"
name = "vidrank"
readme = "README.md"
repository = "https://github.com/gregorybchris/vidrank"
version = "0.1.0"

[[tool.poetry.packages]]
include = "vidrank"

[tool.poetry.dependencies]
click = "^8.1.0"
fastapi = "^0.111.0"
httpx = "^0.27.0"
numpy = "^2.0.0"
pendulum = "^3.0.0"
pydantic = "^2.7.0"
pydantic-extra-types = "^2.8.0"
python = ">=3.12"
trueskill = "^0.4.0"
uvicorn = "^0.30.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.0"
ruff = "^0.5.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
vidrank = "vidrank.cli.cli:main"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
src = ["vidrank"]


[tool.ruff.lint]
ignore = ["FIX002", "TD003"]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "D",
    "E",
    "EM",
    "ERA",
    "F",
    "FIX",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PL",
    "PT",
    "PTH",
    "PLR",
    "RET",
    "RUF",
    "SIM",
    "SLF",
    "T20",
    "TCH",
    "TD",
    "TID",
    "W",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = ["SLF"]
